// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`INTERACTIONS/NavigationButton DefaultValues smoke-test 1`] = `
<button type="button"
        tabindex="0"
        class="navigation-button navigation-button--forward"
>
  Weiter
  <div>
  </div>
</button>
`;

exports[`INTERACTIONS/NavigationButton Disabled play-test 1`] = `
<button type="button"
        tabindex="0"
        disabled
        class="navigation-button navigation-button--forward"
>
  Weiter
  <div>
  </div>
</button>
`;

exports[`INTERACTIONS/NavigationButton TypeBackward smoke-test 1`] = `
<button type="button"
        tabindex="0"
        class="navigation-button navigation-button--backward"
>
  Zurück
</button>
`;

exports[`INTERACTIONS/NavigationButton TypeForward play-test 1`] = `
<button type="button"
        tabindex="0"
        class="navigation-button navigation-button--forward"
>
  Weiter
  <div>
  </div>
</button>
`;

exports[`INTERACTIONS/NavigationButton WithCustomText smoke-test 1`] = `
<button type="button"
        tabindex="0"
        class="navigation-button navigation-button--forward"
>
  Some custom text
  <div>
  </div>
</button>
`;
